Revision history for Test-WWW-Mechanize

WWW::Mechanize and Test::WWW::Mechanize do not use rt.cpan.org for
bug tracking.  They are now being tracked via GitHub at
https://github.com/petdance/test-www-mechanize/issues


NEXT
------------------------------------
[FIXES]
Clarified warnings to make it clear that certain modules are
optional. Thanks, Matthew Chae.


1.50    Mon Apr 16 15:16:59 CDT 2018
------------------------------------
[FIXES]
Added html_tidy_ok() methods, analogous to html_lint_ok().

Remove unnecessary dependency on HTML::TreeBuilder.  Thanks, Kent Fredric.


1.49_01 Mon Mar 26 10:58:51 CDT 2018
------------------------------------
[ENHANCEMENTS]
Adding autotidy functionality. autotidy lets you validate every page that
Mech gets using the HTML::Tidy5 module, just like the autolint feature
does with the HTML::Lint module. HTML::Tidy5 is a much more complete
HTML checking tool, and validates HTML5 which HTML::Lint does not. You
must have HTML::Tidy5 1.00 installed to use autotidy.


1.48    Thu Dec 29 22:45:29 CST 2016
------------------------------------
[FIXES]
The linting method html_lint_ok() was not calling the HTML::Lint API
correctly, so may have missed some HTML errors at the end of a page.
This also applies to get, post, etc if you have the autolint argument on.


1.46
------------------------------------
[ENHANCEMENTS]
Added header_exists_ok(), lacks_header(), header_is() and header_like()
methods.  Thanks to Eric A. Zarko for the original patches.

The scraped_id_is() method used to assign a description for the test if
one was not passed.  Now it does not.

scraped_id_is() now gives proper diagnostics if an ID is not found in
the HTML.

Added a delete_ok() method.  Thanks, moznion.

content_contains() now fails if it's called with a regex.  content_like()
now fails if it's not called with a regex.

[FIXES]
The test server run during the test suite allowed URLs outside of the